v4.9.0/_sources/generated/pcdsdevices.spectrometer.VonHamosFE.rst.txt
pcdsdevices.spectrometer.VonHamosFE
===================================

.. currentmodule:: pcdsdevices.spectrometer

.. autoclass:: VonHamosFE

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - f (FCpt)
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``{self._prefix_focus}``
          - 
          - normal
          - 
    
        * - e (FCpt)
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``{self._prefix_energy}``
          - 
          - normal
          - 
    

    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    
    