v10.4.0/_sources/generated/pcdsdevices.spectrometer.VonHamosFE.rst.txt
pcdsdevices.spectrometer.VonHamosFE
===================================

.. currentmodule:: pcdsdevices.spectrometer

.. autoclass:: VonHamosFE

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - f (FCpt)
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``{self._prefix_focus}``
          - 
          - normal
          - 
    
        * - e (FCpt)
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``{self._prefix_energy}``
          - 
          - normal
          - 
    

    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set_defaults
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: subscriptions
    
    